--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -33,6 +33,13 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: SPRING_DATASOURCE_URL
+              value: jdbc:postgresql://postgresql:5432/ontrack
+            - name: SPRING_DATASOURCE_USERNAME
+              value: ontrack
+            - name: SPRING_DATASOURCE_PASSWORD
+              value: ontrack
           ports:
             - name: http
               containerPort: 8080
