--- a/Chart.yaml
+++ b/Chart.yaml
@@ -28,3 +28,6 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami
     version: 10.9.1
     condition: postgresql.enabled
+  - name: elasticsearch
+    repository: https://helm.elastic.co
+    version: 7.14.0
