--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -36,14 +36,14 @@ spec:
           env:
             # Database configuration
             - name: SPRING_DATASOURCE_URL
-              value: jdbc:postgresql://test-postgresql-headless:5432/ontrack
+              value: jdbc:postgresql://{{ .Release.Name }}-postgresql-headless:5432/ontrack
             - name: SPRING_DATASOURCE_USERNAME
               value: ontrack
             - name: SPRING_DATASOURCE_PASSWORD
               value: ontrack
             # Elasticsearch configuration
             - name: SPRING_ELASTICSEARCH_REST_URIS
-              value: http://elasticsearch-master-headless:9200
+              value: http://{{ .Values.elasticsearch.masterService }}-headless:9200
           ports:
             - name: http
               containerPort: 8080
