#2 Enable ES security

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -44,6 +44,10 @@ spec:
             # Elasticsearch configuration
             - name: SPRING_ELASTICSEARCH_REST_URIS
               value: http://{{ .Values.elasticsearch.masterService }}-headless:9200
+            - name: SPRING_ELASTICSEARCH_REST_USERNAME
+              value: {{ .Values.ontrack.elasticsearch.username }}
+            - name: SPRING_ELASTICSEARCH_REST_PASSWORD
+              value: {{ .Values.ontrack.elasticsearch.password }}
           ports:
             - name: http
               containerPort: 8080
