--- a/Chart.yaml
+++ b/Chart.yaml
@@ -27,7 +27,7 @@ dependencies:
   - name: postgresql
     repository: https://charts.bitnami.com/bitnami
     version: 10.9.1
-    condition: postgresql.enabled
+    condition: postgresql.local
   - name: elasticsearch
     repository: https://helm.elastic.co
     version: 7.14.0
