--- a/Chart.yaml
+++ b/Chart.yaml
@@ -28,6 +28,6 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami
     version: 10.16.1
     condition: postgresql.local
-#  - name: elasticsearch
-#    repository: https://helm.elastic.co
-#    version: 7.14.0
+  - name: elasticsearch
+    repository: https://helm.elastic.co
+    version: 7.16.3
