--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,12 @@ jobs:
         uses: azure/setup-helm@v1
         with:
           version: v3.4.0
-          
+
+      - name: Helm dependencies repositories
+        run: |
+          helm repo add bitnami https://charts.bitnami.com/bitnami
+          helm repo add elastic https://helm.elastic.co
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
         env:
