#1 RabbitMQ - disabling the persistence

--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -89,6 +89,8 @@ postgresql:
 
 # Local RabbitMQ for message processing
 rabbitmq:
+  persistence:
+    enabled: false
   auth:
     username: ontrack
     password: ontrack
