--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -89,11 +89,10 @@ postgresql:
 
 # Local RabbitMQ for message processing
 rabbitmq:
-  persistence:
-    enabled: false
   auth:
     username: ontrack
     password: ontrack
+    erlangCookie: ontrack
 
 # Local Elasticsearch engine for testing purpose
 elasticsearch:
