--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -81,6 +81,14 @@ resources: {}
 ontrack:
   # Comma-separated list of active Spring profiles
   profiles: prod
+  ## Adjust these values to your needs, but make sure that the memory limit is never under 4 GB
+  resources:
+    limits:
+      cpu: 800m
+      memory: 2Gi
+    requests:
+      cpu: 800m
+      memory: 1Gi
   # Persistence configuration
   persistence:
     # By default, not using a persistent storage
