feat: Ingress path type is now configurable

--- a/charts/ontrack/templates/ingress.yaml
+++ b/charts/ontrack/templates/ingress.yaml
@@ -29,7 +29,7 @@ spec:
         paths:
           {{- range .paths }}
           - path: {{ .path }}
-            pathType: Prefix
+            pathType: {{ .pathType | default "Prefix" }}
             backend:
               service:
                 name: {{ $fullName }}
