--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -53,7 +53,9 @@ ingress:
     # kubernetes.io/tls-acme: "true"
 #  hosts:
 #    - host: chart-example.local
-#      paths: []
+#      paths:
+#        - path: /*
+#          pathType: Prefix
 #  tls: []
   #  - secretName: chart-example-tls
   #    hosts:
