--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -10,7 +10,7 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   # tag: ""
 
-imagePullSecrets: []
+imagePullSecrets: [ ]
 nameOverride: ""
 fullnameOverride: ""
 
@@ -18,28 +18,28 @@ serviceAccount:
   # Specifies whether a service account should be created
   create: true
   # Annotations to add to the service account
-  annotations: {}
+  annotations: { }
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-podAnnotations: {}
+podAnnotations: { }
 
-podSecurityContext: {}
-  # fsGroup: 2000
+podSecurityContext: { }
+# fsGroup: 2000
 
-securityContext: {}
+securityContext: { }
   # capabilities:
   #   drop:
   #   - ALL
   # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+# runAsNonRoot: true
+# runAsUser: 1000
 
 service:
   type: ClusterIP
   port: 8080
-  annotations: {}
+  annotations: { }
 
 management:
   service:
@@ -48,15 +48,15 @@ management:
 
 ingress:
   enabled: false
-#  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-#  hosts:
-#    - host: chart-example.local
-#      paths:
-#        - path: /*
-#          pathType: Prefix
-#  tls: []
+    #  annotations: {}
+  # kubernetes.io/ingress.class: nginx
+  # kubernetes.io/tls-acme: "true"
+  #  hosts:
+  #    - host: chart-example.local
+  #      paths:
+  #        - path: /*
+  #          pathType: Prefix
+  #  tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
@@ -84,7 +84,7 @@ ontrack:
     # By default, not using a persistent storage
     enabled: false
     # Set annotations on pvc
-    annotations: {}
+    annotations: { }
     # PVC access mode
     accessMode: ReadWriteOnce
     # PVC initial size
@@ -151,7 +151,16 @@ elasticsearch:
         storage: 5Gi
 
 # In case you want to specify different resources for emptyDir than {}
-emptyDir: {}
+emptyDir: { }
   # Example of resouces that might be used:
   # medium: Memory
   # sizeLimit: 16Mi
+
+## Array of extra containers to run alongside the Ontrack container
+##
+## Example:
+## - name: myapp-container
+##   image: busybox
+##   command: ['sh', '-c', 'echo Hello && sleep 3600']
+##
+extraContainers: [ ]
