feat: Configurable key store ~> fixed key name

--- a/charts/ontrack/templates/deployment.yaml
+++ b/charts/ontrack/templates/deployment.yaml
@@ -77,7 +77,7 @@ spec:
             # Key management
             ########################################
             - name:  ONTRACK_CONFIG_KEY_STORE
-              value: {{ .Values.ontrack.config.key-store | quote }}
+              value: {{ .Values.ontrack.config.key_store | quote }}
             ########################################
             # Metrics tags
             ########################################
