--- a/charts/ontrack/templates/deployment.yaml
+++ b/charts/ontrack/templates/deployment.yaml
@@ -164,5 +164,6 @@ spec:
         {{- if .Values.ontrack.casc.map }}
         - name: casc
           configMap:
-            name: {{ include "ontrack.fullname" . }}-casc
+            name: {{ .Values.ontrack.casc.map | quote }}
+            optional: false
         {{- end }}
