--- a/charts/ontrack/templates/service-management.yaml
+++ b/charts/ontrack/templates/service-management.yaml
@@ -1,25 +1,21 @@
+{{- if .Values.management.service.specific }}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "ontrack.fullname" . }}
+  name: {{ include "ontrack.fullname" . }}-management
   labels:
     {{- include "ontrack.labels" . | nindent 4 }}
-  {{- with .Values.service.annotations }}
+  {{- with .Values.management.service.annotations }}
   annotations:
     {{- toYaml . | nindent 8 }}
   {{- end }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.management.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: 8080
-      protocol: TCP
-      name: http
-    {{- if not .Values.management.service.specific }}
     - port: {{ .Values.management.service.port }}
       targetPort: 8800
       protocol: TCP
       name: mgt
-    {{- end }}
   selector:
     {{- include "ontrack.selectorLabels" . | nindent 4 }}
+{{- end }}
