Fixing the metrics tags

--- a/charts/ontrack/templates/deployment.yaml
+++ b/charts/ontrack/templates/deployment.yaml
@@ -106,7 +106,7 @@ spec:
             - name: MANAGEMENT_METRICS_TAGS_APPLICATION
               value: {{ .Values.ontrack.management.metrics.tags.application | quote }}
             - name: MANAGEMENT_METRICS_TAGS_APPLICATION_INSTANCE
-              value: {{ .Values.ontrack.management.metrics.tags.instance | quote }}
+              value: {{ .Values.ontrack.management.metrics.tags.application_instance | quote }}
             ########################################
             # Casc
             ########################################
